--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
+    "embla-carousel-react": "^8.1.3",
     "firebase": "^11.8.1",
     "genkit": "~1.8.0",
     "jspdf": "^2.5.1",
