--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.1.3",
     "firebase": "^11.8.1",
+    "firebase-admin": "^12.3.0",
     "genkit": "~1.8.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
     "next": "14.2.3",
+    "nookies": "^2.5.2",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
